components/03 - global/site-name/_site-name.scss
.uiowa-bar__title {
  display: flex;
  align-items: center;
  margin: 0 auto 0 10px;
  text-align: left;
  font-size: calc(100% + 1.2vw);
  font-weight: 300;
  font-family: $font-family-sans-serif;
  a {
    color: $secondary;
    text-decoration: none;;
  }

  @include breakpoint(menu) {
    flex-basis: content;
    margin: 0 0 0 20px;
    font-size: calc(100% + 1.4vw);
  }

  @include breakpoint(container) {
    margin: 0 0 0 20px;
    text-align: left;
    font-size: 2.2rem;
  }

  .header--secondary & {
    .search-is-open & {
      //@include element-invisible;
      display: none;
    }
  }


  .header--tertiary & {
    width: 70%;
    margin: 0;
    padding: 20px;
    text-align: left;

    @include breakpoint(menu) {
      width: auto;
      padding: 25px 20px 25px 0;
    }

    .search-is-open & {
      //@include element-invisible;
      display: none;
    }
  }
}

@media (max-width: 1018px) and (min-width: 855px) {
  .header--tertiary .uiowa-bar__title {
    font-size: calc(100% + 1vw);
  }
}

